Refs #8668 and #8595; better fix for the table.listing overflow issue; fixed globalnav for 1024px when loggen in

--- a/eea/design/skins/eeadesign_cms/ploneAdmin.css
+++ b/eea/design/skins/eeadesign_cms/ploneAdmin.css
@@ -6,11 +6,6 @@ body.mceContentBody {
     margin: 0px !important;
 }
 
-#portal-globalnav li{
-    width: auto;
-    margin: 0 0.25em 0 0;
-}
-
 #portal-column-one .visualPadding,
 #portal-column-two .visualPadding {
    padding: 0.5em;
